[package]
name = "web-drive-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", features = ["openssl"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
log = "0.4.19"
openssl ={ version = "0.10.54", features = ["v110"] }
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "mysql"] }
